--- a/Semester 2/Pemrograman Dasar/Tugas 25-5-2023/all.html
+++ b/Semester 2/Pemrograman Dasar/Tugas 25-5-2023/all.html
@@ -21,6 +21,16 @@
         padding: 15px;
       }
 
+      .text-justify {
+        text-align: start;
+      }
+
+      @media (min-width: 768px) {
+        .text-justify {
+          text-align: justify;
+        }
+      }
+
       .bi {
         vertical-align: -.125em;
         fill: currentColor;
@@ -110,29 +120,28 @@
         <div class="card-header">
           <ul class="nav nav-tabs card-header-tabs" id="myTab">
             <li class="nav-item">
-              <a href="#home" class="nav-link active" data-bs-toggle="tab">Home</a>
+              <a href="#beranda" class="nav-link active" data-bs-toggle="tab">Beranda</a>
             </li>
             <li class="nav-item">
-              <a href="#profile" class="nav-link" data-bs-toggle="tab">Profile</a>
+              <a href="#bio" class="nav-link" data-bs-toggle="tab">Biodata</a>
             </li>
             <li class="nav-item">
-              <a href="#messages" class="nav-link" data-bs-toggle="tab">Messages</a>
+              <a href="#p1" class="nav-link" data-bs-toggle="tab">Percepatan</a>
             </li>
           </ul>
         </div>
         <div class="card-body">
           <div class="tab-content">
-            <div class="tab-pane fade show active" id="home">
-              <h5 class="card-title">Home tab content</h5>
-              <p class="card-text">Here is some example text to make up the tab's content. Replace it with your own text anytime.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="tab-pane fade show active" id="beranda">
+              <h5 class="card-title">Tugas Pemrograman Dasar</h5>
+              <p class="card-text w-75 text-justify m-auto">Tugas Pemrograman Dasar ini melibatkan pembuatan program yang dapat menghitung percepatan, kecepatan, dan energi potensial. Dengan menggunakan program ini, pengguna dapat dengan mudah menghitung nilai-nilai tersebut dengan memberikan input yang sesuai. <br/> <br/> Adapun tugas yang diberikan sebagai berikut :</p>
             </div>
-            <div class="tab-pane fade" id="profile">
+            <div class="tab-pane fade" id="bio">
               <h5 class="card-title">Profile tab content</h5>
               <p class="card-text">Here is some example text to make up the tab's content. Replace it with your own text anytime.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-            <div class="tab-pane fade" id="messages">
+            <div class="tab-pane fade" id="p1">
               <h5 class="card-title">Messages tab content</h5>
               <p class="card-text">Here is some example text to make up the tab's content. Replace it with your own text anytime.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
