create beranda and biodata

--- a/Semester 2/Pemrograman Dasar/Tugas 25-5-2023/all.html
+++ b/Semester 2/Pemrograman Dasar/Tugas 25-5-2023/all.html
@@ -135,11 +135,61 @@
             <div class="tab-pane fade show active" id="beranda">
               <h5 class="card-title">Tugas Pemrograman Dasar</h5>
               <p class="card-text w-75 text-justify m-auto">Tugas Pemrograman Dasar ini melibatkan pembuatan program yang dapat menghitung percepatan, kecepatan, dan energi potensial. Dengan menggunakan program ini, pengguna dapat dengan mudah menghitung nilai-nilai tersebut dengan memberikan input yang sesuai. <br/> <br/> Adapun tugas yang diberikan sebagai berikut :</p>
+              <table class="table table-borderless w-75 m-auto">
+                <thead>
+                  <tr>
+                    <th scope="col">No</th>
+                    <th scope="col" class="text-start">Soal</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row" class="pt-0 pb-1">1</th>
+                    <td class="text-start pt-0 pb-1">Buatkan program aplikasi perhitungan percepatan menggunakan html.</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="pt-0 pb-1">2</th>
+                    <td class="text-start pt-0 pb-1">Buatkan program aplikasi perhitungan kecepatan menggunakan html.</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="pt-0 pb-1">3</th>
+                    <td class="text-start pt-0 pb-1">Buatkan program aplikasi perhitungan energi potensial menggunakan html.</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
             <div class="tab-pane fade" id="bio">
-              <h5 class="card-title">Profile tab content</h5>
-              <p class="card-text">Here is some example text to make up the tab's content. Replace it with your own text anytime.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Biodata</h5>
+              <p class="card-text">Berikut ini merupakan biodata singkat saya :</p>
+              <table class="table table-borderless w-auto m-auto">
+                <tbody>
+                  <tr>
+                    <th scope="row" class="text-start py-0">Nama Lengkap</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">Sofa Machabba Haeta</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start py-0">Nomor Mahasiswa</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">6622600044</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start py-0">Semester / Kelas</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">II / B</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start py-0">Program Studi</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">Informatika S1</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start py-0">Fakultas</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">Teknik dan Ilmu Komputer</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
             <div class="tab-pane fade" id="p1">
               <h5 class="card-title">Messages tab content</h5>
