--- a/Semester 2/Pemrograman Dasar/Tugas 25-5-2023/all.html
+++ b/Semester 2/Pemrograman Dasar/Tugas 25-5-2023/all.html
@@ -198,10 +198,10 @@
                 Kalkulator percepatan ini adalah kalkulator yang dapat menghitung percepatan rata-rata dan perceaptan sesaat.
                 Fitur ini terinspirasi dari situs <a href="https://kalkulator.id/kalkulator-percepatan/">Kalkulator ID - Kalkulator Percepatan</a>.
               </p>
-              <form class="w-75 m-auto mt-4">
+              <form id="p1-percepatan" class="w-75 m-auto mt-4">
                 <div class="input-group mb-3">
                   <label class="input-group-text" for="percepatan-pilihan">Jenis</label>
-                  <select required class="form-select" id="percepatan-pilihan">
+                  <select class="form-select" id="percepatan-pilihan">
                     <option selected>Pilihan...</option>
                     <option value="1">Percepatan Rata-Rata</option>
                     <option value="2">Percepatan Sesaat</option>
@@ -210,8 +210,8 @@
                 <div id="percepatan-rata" class="d-none">
                   <div class="input-group mb-3">
                     <label class="input-group-text" for="percepatan-rata-v1">v1</label>
-                    <input required type="number" class="form-control" id="percepatan-rata-v1">
-                    <select required class="form-select" id="percepatan-rata-v1-jarak">
+                    <input type="number" class="form-control" id="percepatan-rata-v1" name="percepatan-rata-v1">
+                    <select class="form-select" id="percepatan-rata-v1-jarak">
                       <option value="1">Km</option>
                       <option value="2">Hm</option>
                       <option value="3">Dam</option>
@@ -221,7 +221,7 @@
                       <option value="7">Mm</option>
                     </select>
                     <span class="input-group-text">/</span>
-                    <select required class="form-select" id="percepatan-rata-v1-waktu">
+                    <select class="form-select" id="percepatan-rata-v1-waktu">
                       <option selected value="1">Detik</option>
                       <option value="2">Menit</option>
                       <option value="3">Jam</option>
@@ -229,8 +229,8 @@
                   </div>
                   <div class="input-group mb-3">
                     <label class="input-group-text" for="percepatan-rata-v2">v2</label>
-                    <input required type="number" class="form-control" id="percepatan-rata-v2">
-                    <select required class="form-select" id="percepatan-rata-v2-jarak">
+                    <input type="number" class="form-control" id="percepatan-rata-v2" name="percepatan-rata-v2">
+                    <select class="form-select" id="percepatan-rata-v2-jarak">
                       <option value="1">Km</option>
                       <option value="2">Hm</option>
                       <option value="3">Dam</option>
@@ -240,7 +240,7 @@
                       <option value="7">Mm</option>
                     </select>
                     <label class="input-group-text">/</label>
-                    <select required class="form-select" id="percepatan-rata-v2-waktu">
+                    <select class="form-select" id="percepatan-rata-v2-waktu">
                       <option selected value="1">Detik</option>
                       <option value="2">Menit</option>
                       <option value="3">Jam</option>
@@ -248,8 +248,8 @@
                   </div>
                   <div class="input-group mb-3">
                     <label class="input-group-text" for="percepatan-rata-t1">t1</label>
-                    <input required type="number" class="form-control" id="percepatan-rata-t1">
-                    <select required class="form-select" id="percepatan-rata-t1-waktu">
+                    <input type="number" class="form-control" id="percepatan-rata-t1" name="percepatan-rata-t1">
+                    <select class="form-select" id="percepatan-rata-t1-waktu">
                       <option selected value="1">Detik</option>
                       <option value="2">Menit</option>
                       <option value="3">Jam</option>
@@ -257,8 +257,8 @@
                   </div>
                   <div class="input-group mb-3">
                     <label class="input-group-text" for="percepatan-rata-t2">t2</label>
-                    <input required type="number" class="form-control" id="percepatan-rata-t2">
-                    <select required class="form-select" id="percepatan-rata-t2-waktu">
+                    <input type="number" class="form-control" id="percepatan-rata-t2" name="percepatan-rata-t2">
+                    <select class="form-select" id="percepatan-rata-t2-waktu">
                       <option selected value="1">Detik</option>
                       <option value="2">Menit</option>
                       <option value="3">Jam</option>
@@ -266,7 +266,7 @@
                   </div>
                   <div class="input-group mb-3">
                     <span class="input-group-text">Hasil</span>
-                    <select required class="form-select" id="percepatan-rata-hasil-jarak">
+                    <select class="form-select" id="percepatan-rata-hasil-jarak">
                       <option value="1">Km</option>
                       <option value="2">Hm</option>
                       <option value="3">Dam</option>
@@ -276,7 +276,7 @@
                       <option value="7">Mm</option>
                     </select>
                     <span class="input-group-text">/</span>
-                    <select required class="form-select" id="percepatan-rata-hasil-waktu">
+                    <select class="form-select" id="percepatan-rata-hasil-waktu">
                       <option selected value="1">Detik</option>
                       <option value="2">Menit</option>
                       <option value="3">Jam</option>
@@ -287,15 +287,15 @@
                 <div id="percepatan-sesaat" class="d-none">
                   <div class="input-group mb-3">
                     <span class="input-group-text">Persamaan</span>
-                    <input required type="text" class="form-control" id="percepatan-sesaat-persamaan">
+                    <input type="text" class="form-control" id="percepatan-sesaat-persamaan" name="percepatan-sesaat-persamaan">
                     <span class="input-group-text">M</span>
                     <span class="input-group-text">/</span>
                     <span class="input-group-text">Detik</span>
                   </div>
                   <div class="input-group mb-3">
                     <label class="input-group-text" for="percepatan-sesaat-t">t</label>
-                    <input required type="number" class="form-control" id="percepatan-sesaat-t">
-                    <select required class="form-select" id="percepatan-sesaat-t-waktu">
+                    <input type="number" class="form-control" id="percepatan-sesaat-t" name="percepatan-sesaat-t">
+                    <select class="form-select" id="percepatan-sesaat-t-waktu">
                       <option selected value="1">Detik</option>
                       <option value="2">Menit</option>
                       <option value="3">Jam</option>
@@ -313,6 +313,39 @@
     <script>
       (() => {
         'use strict'
+        // FUCK STUCK
+        function Jarak(nilai) {
+          let satuan;
+          switch (nilai) {
+            case 1: satuan = "km"; break;
+            case 2: satuan = "hm"; break;
+            case 3: satuan = "dam"; break;
+            case 4: satuan = "m"; break;
+            case 5: satuan = "dm"; break;
+            case 6: satuan = "cm"; break;
+            case 7: satuan = "mm"; break;
+            default:
+              satuan = "";
+          }
+          return satuan;
+        }
+        function Waktu(nilai) {
+          let satuan;
+          switch (nilai) {
+            case 1: satuan = "detik"; break;
+            case 2: satuan = "menit"; break;
+            case 3: satuan = "jam"; break;
+            default:
+              satuan = "";
+          }
+          return satuan;
+        }
+        function Nilai(nilai, satuanAwal, satuanAkhir) {
+          const faktor = { km: 1000000, hm: 100000, dam: 10000, m: 1000, dm: 100, cm: 10, mm: 1 }
+          const milimeter = nilai * faktor[satuanAwal];
+          const konversi = milimeter / faktor[satuanAkhir];
+          return konversi;
+        }
         document.addEventListener('DOMContentLoaded', function() {
           document.querySelector("#percepatan-pilihan").addEventListener('change', function() {
             var selectedValue = this.value
@@ -330,8 +363,71 @@
               document.getElementById("percepatan-rata").classList.remove('d-block')
               document.getElementById("percepatan-sesaat").classList.remove('d-block')
             }
-          });
-        });
+          })
+        })
+
+        document.getElementById('p1-percepatan').addEventListener('submit', function(event) {
+          event.preventDefault()
+          var v1 = {
+            value: document.getElementById("percepatan-rata-v1").value,
+            jarak: document.getElementById("percepatan-rata-v1-jarak").value,
+            waktu: document.getElementById("percepatan-rata-v1-waktu").value
+          }, v2 = {
+            value: document.getElementById("percepatan-rata-v2").value,
+            jarak: document.getElementById("percepatan-rata-v2-jarak").value,
+            waktu: document.getElementById("percepatan-rata-v2-waktu").value
+          }, t1 = {
+            value: document.getElementById("percepatan-rata-t1").value,
+            waktu: document.getElementById("percepatan-rata-t1-waktu").value
+          }, t2 = {
+            value: document.getElementById("percepatan-rata-t2").value,
+            waktu: document.getElementById("percepatan-rata-t2-waktu").value
+          }, hasil = {
+            jarak: document.getElementById("percepatan-rata-hasil-jarak").value,
+            waktu: document.getElementById("percepatan-rata-hasil-waktu").value
+          }
+
+          Swal.fire({
+            title: "Hasil Akhir",
+            html: `
+              <table class="table table-borderless w-auto m-auto">
+                <tbody>
+                  <tr>
+                    <th scope="row" class="text-start py-0">1.</th>
+                    <td class="py-0">Diketahui</td>
+                    <td class="text-start py-0">
+                      v1 = ${v1.value} ${Jarak(v1.jarak)}/${Waktu(v1.waktu)}
+                      v2 = ${v2.value} ${Jarak(v2.jarak)}/${Waktu(v2.waktu)}
+                      t1 = ${t1.value} ${Waktu(t1.waktu)}
+                      t2 = ${t2.value} ${Waktu(t2.waktu)}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start py-0">2.</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">6622600044</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start py-0">3.</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">II / B</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start py-0">4.</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">Informatika S1</td>
+                  </tr>
+                  <tr>
+                    <th scope="row" class="text-start py-0">5.</th>
+                    <td class="py-0">:</td>
+                    <td class="text-start py-0">Teknik dan Ilmu Komputer</td>
+                  </tr>
+                </tbody>
+              </table>
+            `,
+            confirmButtonColor: "#0d6efd",
+          })
+        })
       })()
     </script>
   </body>
