--- a/Semester 3/Web Desain/24 Oktober 2023/index.html
+++ b/Semester 3/Web Desain/24 Oktober 2023/index.html
@@ -10,6 +10,7 @@
     https://sofa.my.id/
 
     Repositori : github.com/sofaemha/upstegal
+    Preview : https://github.sofa.my.id/upstegal/Semester%203/Web%20Desain/24%20Oktober%202023/index.html
 
  -->
 
